project renamed from "GitLab Gantt" to "GanttLab"

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="icon" href="data:;base64,iVBORw0KGgo=">
-    <title>GitLab Gantt</title>
+    <title>GanttLab</title>
   </head>
   <body>
     <div id="app"></div>
