--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
   <head>
     <meta charset="utf-8">
     <link rel="icon" href="data:;base64,iVBORw0KGgo=">
-    <title>GanttLab</title>
+    <title>GanttLab by @clorichel</title>
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@clorichel">
+    <meta name="twitter:creator" content="@clorichel">
+    <meta name="twitter:title" content="GanttLab by @clorichel">
+    <meta name="twitter:description" content="An easy to use, fully functional Gantt chart for GitLab.">
+    <meta name="twitter:image" content="/ganttlab/static/img/GanttLab.png">
   </head>
   <body>
     <div id="app"></div>
