--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="twitter:creator" content="@clorichel">
     <meta name="twitter:title" content="GanttLab by @clorichel">
     <meta name="twitter:description" content="An easy to use, fully functional Gantt chart for GitLab.">
-    <meta name="twitter:image" content="/ganttlab/static/img/GanttLab.png">
+    <meta name="twitter:image" content="https://clorichel.gitlab.io/ganttlab/static/img/GanttLab.png">
   </head>
   <body>
     <div id="app"></div>
