GanttLab is The easy to use, fully functional Gantt chart for GitLab.

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <link rel="icon" href="data:;base64,iVBORw0KGgo=">
-    <title>GanttLab - An easy to use, fully functional Gantt chart for GitLab.</title>
+    <title>GanttLab - The easy to use, fully functional Gantt chart for GitLab.</title>
     <link rel="canonical" href="https://live.ganttlab.org/" />
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@clorichel">
     <meta name="twitter:creator" content="@clorichel">
     <meta name="twitter:title" content="GanttLab - Gantt chart for GitLab">
-    <meta name="twitter:description" content="An easy to use, fully functional Gantt chart for GitLab.">
+    <meta name="twitter:description" content="The easy to use, fully functional Gantt chart for GitLab.">
     <meta name="twitter:image" content="https://live.ganttlab.org/static/img/GanttLab.png">
   </head>
   <body>
