--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="twitter:creator" content="@clorichel">
     <meta name="twitter:title" content="GanttLab Live">
     <meta name="twitter:description" content="The easy to use, fully functional Gantt chart for GitLab.">
-    <meta name="twitter:image" content="https://live.ganttlab.org/static/img/GanttLab.png">
+    <meta name="twitter:image" content="https://live.ganttlab.org/static/img/GanttLab.jpg">
   </head>
   <body>
     <div id="app"></div>
