added favicons and edited twitter creator

--- a/index.html
+++ b/index.html
@@ -5,12 +5,23 @@
     <link rel="icon" href="data:;base64,iVBORw0KGgo=">
     <title>GanttLab Live - The easy to use, fully functional Gantt chart for GitLab.</title>
     <link rel="canonical" href="https://live.ganttlab.org/" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/static/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="/static/favicons/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/static/favicons/favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="/static/favicons/manifest.json">
+    <link rel="mask-icon" href="/static/favicons/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="/static/favicons/favicon.ico">
+    <meta name="apple-mobile-web-app-title" content="GanttLab Live">
+    <meta name="application-name" content="GanttLab Live">
+    <meta name="msapplication-config" content="/static/favicons/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@clorichel">
-    <meta name="twitter:creator" content="@clorichel">
+    <meta name="twitter:site" content="@GanttLab">
+    <meta name="twitter:creator" content="@GanttLab">
     <meta name="twitter:title" content="GanttLab Live">
     <meta name="twitter:description" content="The easy to use, fully functional Gantt chart for GitLab.">
     <meta name="twitter:image" content="https://live.ganttlab.org/static/img/GanttLab.jpg">
+
   </head>
   <body>
     <div id="app"></div>
