--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="icon" href="data:;base64,iVBORw0KGgo=">
-    <title>GanttLab Live - The easy to use, fully functional Gantt chart for GitLab.</title>
+    <title>GanttLab Live</title>
     <link rel="canonical" href="https://live.ganttlab.org/" />
     <link rel="apple-touch-icon" sizes="180x180" href="/static/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" href="/static/favicons/favicon-32x32.png" sizes="32x32">
@@ -21,7 +21,7 @@
     <meta name="twitter:title" content="GanttLab Live">
     <meta name="twitter:description" content="The easy to use, fully functional Gantt chart for GitLab.">
     <meta name="twitter:image" content="https://live.ganttlab.org/static/img/GanttLab.jpg">
-
+    <link href='https://fonts.googleapis.com/css?family=Anaheim%7CQuattrocento+Sans:400,400italic,700' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <div id="app"></div>
