--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta name="twitter:title" content="GanttLab Live">
     <meta name="twitter:description" content="The easy to use, fully functional Gantt chart for GitLab.">
     <meta name="twitter:image" content="https://live.ganttlab.org/static/img/GanttLab.jpg">
-    <link href='https://fonts.googleapis.com/css?family=Anaheim%7CQuattrocento+Sans:400,400italic,700' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Anaheim%7CQuattrocento+Sans:400,400italic,700" rel="stylesheet" type="text/css">
   </head>
   <body>
     <div id="app"></div>
