informative welcome screen to new version

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <link rel="icon" href="data:;base64,iVBORw0KGgo=">
     <title>GanttLab Live</title>
+    <meta name="description" content="Legacy: head to https://app.ganttlab.org. The easy to use, fully functional Gantt chart for GitLab and GitHub.">
     <link rel="canonical" href="https://live.ganttlab.org/" />
     <link rel="apple-touch-icon" sizes="180x180" href="/static/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" href="/static/favicons/favicon-32x32.png" sizes="32x32">
